add back actuator for /actuator/health endpoints

--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.3'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.4.3'
 }
 
