update the properties file to simplify the example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-message.text=${MESSAGE_TEXT:This is the default value.}
+message.text=This is the default value specified in src/main/resources/application.properties and is displayed when no value is set.
