--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.4.3'
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.4.3'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa:2.4.3')
+    implementation 'org.postgresql:postgresql:42.2.19'
 }
 
